# phillies-statcast-claude

./: .gitignore  COMPARISON.md  Home.py  README.md  pyproject.toml  requirements.txt
.github/workflows/: update_data.yml
.streamlit/: config.toml
pages/: 1_Longest_Home_Runs.py  2_Power_Stats.py  3_Player_Summary.py  4_Game_Log.py  5_Pitching_Dashboard.py  6_Strikeout_Leaders.py  7_Velocity_Leaders.py  8_Pitcher_Profiles.py
scripts/: bootstrap_2026.py  capture_wave2_screenshots.py  update_daily.py  upsert_state_summary.py
src/phillies_stats/: __init__.py  batter_page.py  config.py  dashboard_page.py  database.py  display.py  home_page.py  ingest.py  league_context.py  pitcher_page.py  queries.py  state_summary.py  team_context.py  team_page.py  ui.py
tests/: support.py  test_ingest.py  test_league_context.py  test_queries.py  test_state_summary.py  test_team_context.py  test_ui.py
